# NRI-CSA_Data_Processing

./: .gitignore  CMakeLists.txt  Main_Calibrate_User_Study.m  Main_Micron2Rob_Registration.m  Main_Process_MicronCalibrate.m  Main_Process_MicronCorners.m  Main_Process_MicronMovement.m  README.md  Test_Organ_Registration.m  Test_Process_Nabil_I.m  Test_Process_UserStudy.asv  Test_Process_UserStudy.m  Test_Process_UserStudy_II.m  calibrateTool.m  package.xml  pivot_calibration_micron.m  plotExperiment.m  readContinuousBag.m  readPalpationBag.m  readPoseStampedBag.m  readRobTxt.m  readVisualArteryBag.m  readWrenchBag.m  registerOrgan.m  tip_calibration.yaml  trimBetweenTime.m
Utilities/: averageQuaternions.m  quat2rot.m  rot2quat.m
config/: tip_calibration_VU.yaml
documentation/: Big_Normal_Marker.xcf  Markers_15mmx20mm.docx  README.md  User Study Script.docx
scripts/: Effort.m  Main_Calibrate_User_Study.m  Main_Get_Experiment_Metrics.asv  Main_Get_Experiment_Metrics.m  Main_Get_Experiment_Metrics_Test.m  Main_Save_Figures.m  Main_TRE_Artery.m  PSMRegPtsJHU.txt  PSMRegPtsJHU_II.txt  PSMRegPtsVU.txt  Process_Micron_GP  SaveExperimentData.m  Setup_Directory_Data.m  arteryMetrics.mat  bag_to_images.py  getArteryPoints.m  getExperimentFiles.m  getMicronTip.m  getOrganPoints.m  getSpherePoints.m  label2num.m  main_process_experiment.py  organ_reg_pts.m  organ_registration.m  pivot_calibration_multifile.m  plotArteryStatistics.m  plotExperiment.m  plotPalpationStatistics.m  processArteryExperiment.m  processPalpationExperiment.m  process_PSMRegPts.m  readPSMRegPts.m  readRobTxt.m  readme.m  test.mat  (+3 more)
(+67 files in other folders)
